replicator-runner/kubernetes/replicator-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replicator-grpc-service
spec:
  clusterIP: None
  selector:
    app: replicator
  ports:
    - protocol: TCP
      port: 6545
      targetPort: 6545
      name: replicator
