replicator-runner/kubernetes/replicator-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: replicator-service
spec:
  selector:
    app: replicator
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 63452
      targetPort: 8000
