replicator-runner/kubernetes/replicator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replicator-service
spec:
  selector:
    app: replicator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
