replicator-runner/kubernetes/replicator-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: replicator-ingress
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: replicator-service
              servicePort: 80
